# photokan

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
benchmarks/: energy_estimate.py  snr_sweep.py  vs_mlp.py
examples/: mnist_photokan.py  physics_simulation.py  regression_photonic.py
examples/examples/: llm_photokan.py  mnist_photokan.py
photokan/: __init__.py
photokan/activations/: __init__.py  base.py  fourier_edge.py  relu_edge.py  sine_edge.py  spline_edge.py
photokan/backend/: __init__.py  dispatch.py  errors.py  qpal_backend.py  qpal_dispatch.py  registry.py  sim_backend.py
photokan/backends/: __init__.py  base.py  errors.py  registry.py
photokan/backends/lightmatter/: __init__.py  backend.py
photokan/backends/qant/: __init__.py  backend.py
photokan/backends/salience/: __init__.py  backend.py
photokan/compiler/: __init__.py  graph_builder.py  lut_compiler.py  program.py
photokan/layers/: __init__.py  conv_kan.py  photokan.py  photokan_layer.py
photokan/llm/: __init__.py  adapters.py  attention.py  replacer.py
photokan/sim/: __init__.py  photonic_sim.py
photokan/utils/: __init__.py  energy.py  gradient_check.py  onnx_export.py  profiler.py  symbolic.py  visualization.py
tests/activations/: test_fourier_edge.py  test_relu_edge.py  test_sine_edge.py  test_spline_edge.py
tests/backend/: test_backend_registry.py  test_dispatch.py  test_gradient_check.py  test_qpal_backend.py  test_sim_backend.py
tests/backends/: test_base.py
tests/compiler/: test_graph_builder.py  test_lut_compiler.py  test_photonic_program.py
tests/integration/: test_compile_and_run.py  test_mnist.py  test_onnx_export.py  test_regression.py
tests/layers/: test_conv_kan.py  test_photokan.py  test_photokan_layer.py
tests/llm/: test_adapters.py  test_attention.py  test_replacer.py
tests/sim/: test_photonic_sim.py
tests/utils/: test_energy.py  test_profiler.py  test_symbolic.py  test_visualization.py
